--- a/the_weather/weather/templates/weather/index.html
+++ b/the_weather/weather/templates/weather/index.html
@@ -15,6 +15,7 @@
           <button class="btn btn-primary" type="submit">Search</button>
         </form>
       </div>
+      {% for city_weather in weather_data %}
       <div class="card mb-3" style="max-width: 300px;">
         <div class="row g-0">
           <div class="col-md-4 text-center">
@@ -29,7 +30,7 @@
           </div>
         </div>
       </div>
-
+      {% endfor %}
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
